--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div class="search">
       <input type="text" placeholder="Enter city name" spellcheck="false">
       <button><img src="search.jpg" alt="image"></button>
+      <ul id="city-suggestions"></ul>
     </div>
     <div class="error">
       <p>Invalid city name</p>
